# python_dsml_mod_1_hw

./: Dockerfile  main.py  main_definitions.py  pyproject.toml
