[tool.poetry]
name = "personal-contacts-manager"
version = "1"
description = "CLI personal contacts manager"
authors = ["RomanKhakhula <rkhakhula@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
